Fix spacing in Teachers & Admin Section

--- a/app/styles/home-view.sass
+++ b/app/styles/home-view.sass
@@ -259,13 +259,20 @@
 
     #for-teachers, #for-leaders
       background-color: #F7F9F9
+      .first_row
+        padding: 40px 0 0 0
+        @media (min-width: $screen-lg-min)
+          padding: 40px 0
+      .second_row
+        padding: 0 0 45px 0
       .tile-shadow
         background-color: #FFFFFF
         box-shadow: 2px 2px 6px 0 rgba(155,155,155,0.51)
         padding: 12px
-        height: 260px
+        height: 288px
         img
-          height: 70px
+          padding-top: 25px
+          height: 98px
         h3
           margin: 10px auto 15px
 
